--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,8 +18,11 @@ html {
 body {
   font-size: 1.6rem;
   font-family: "Roboto", sans-serif;
+  background-color: #f2f3f4;
   height: 100vh;
-  position: relative;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr 9.6rem;
 }
 a,
 a:link,
@@ -32,6 +35,8 @@ a:visited {
   justify-content: space-between;
   align-items: center;
   padding: 0 1.5rem 0 8rem;
+  height: 9.6rem;
+  background-color: rgba(212, 224, 236, 0.81);
 }
 .footer__credits {
   display: flex;
@@ -58,9 +63,6 @@ a:visited {
   color: #827a7a;
 }
 .home + .footer {
-  height: 9.6rem;
-  background-color: rgba(212, 224, 236, 0.81);
-  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
